--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: test
+name: Test
 
 on: [push]
 jobs:
@@ -12,7 +12,7 @@ jobs:
         #настаиваем java
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
+          distribution: 'zulu'
           java-version: '17'
         #запуск тестов
       - run: ./gradlew clean test
