--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,5 +14,6 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
+      - uses: Xotabu4/selenoid-github-action@v2
         #запуск тестов
-      - run: ./gradlew clean test
+      - run: ./gradlew clean test -Dselenide.remote=http://localhost:4444/wd/hub
